[package]
name = "translate-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "translate-bot"
path = "src/main.rs"

[dependencies]
matrix-sdk = { version = "0.17", features = ["e2e-encryption", "sqlite", "automatic-room-key-forwarding"] }
matrix-sdk-crypto = "0.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures-util = "0.3"
pulldown-cmark          = "0.12"
pulldown-cmark-to-cmark = "18"
mxbot-common = { git = "https://github.com/PolynomialDivision/mxbot-common" }
